--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@iconify/react": "^4.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@iconify/react": "^4.1.1",
     "@thirdweb-dev/react": "^4.1.17",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -29,6 +29,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "next": "13.4.12",
+    "nft.storage": "^7.1.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
