--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@ethereum-attestation-service/eas-sdk": "^1.3.8",
     "@iconify/react": "^4.1.1",
     "@thirdweb-dev/react": "^4.1.17",
     "@types/node": "20.4.5",
