--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.3",
     "sort-by": "^0.0.2",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
