--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@tanstack/react-query": "^5.32.0",
     "@web3modal/wagmi": "^4.1.11",
+    "autoprefixer": "^10.4.19",
     "formik": "^2.4.6",
     "jotai": "^2.8.0",
     "next": "14.2.3",
@@ -20,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8",
+    "tailwindcss": "^3.4.3",
     "viem": "^2.9.26",
     "wagmi": "^2.5.20",
     "yup": "^1.4.0"
