--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@supabase/supabase-js": "^2.43.1",
     "@tanstack/react-query": "^5.32.0",
+    "@types/axios": "^0.14.0",
     "@web3modal/wagmi": "^4.1.11",
     "autoprefixer": "^10.4.19",
     "formik": "^2.4.6",
